fix: stage dynamicPopover,stepGroup align issue warning icon on stage/step incomplete

--- a/src/modules/70-pipeline/components/AbstractNode/Nodes/DefaultNode/DefaultNode.module.scss
+++ b/src/modules/70-pipeline/components/AbstractNode/Nodes/DefaultNode/DefaultNode.module.scss
@@ -395,3 +395,16 @@
 .stepGroupRightAddLink {
   right: -35px !important;
 }
+.stageRow {
+  cursor: pointer;
+  position: relative;
+  .secondaryIcon {
+    position: absolute;
+    top: 3px;
+    left: 3px;
+  }
+}
+.render-popover {
+  min-width: 140px;
+  z-index: 2;
+}
